src/bridge/bridge.hpp

extern "C" XTP::API::QuoteApi *CreateQuoteApi(uint8_t client_id, const char *save_file_path, XTP_LOG_LEVEL log_level = XTP_LOG_LEVEL_DEBUG);
extern "C" void QuoteApi_Release(XTP::API::QuoteApi *self);
extern "C" const char *QuoteApi_GetTradingDay(XTP::API::QuoteApi *self);
extern "C" const char *QuoteApi_GetApiVersion(XTP::API::QuoteApi *self);
extern "C" XTPRI *QuoteApi_GetApiLastError(XTP::API::QuoteApi *self);
extern "C" void QuoteApi_SetUDPBufferSize(XTP::API::QuoteApi *self, uint32_t buff_size);
extern "C" void QuoteApi_RegisterSpi(XTP::API::QuoteApi *self, XTP::API::QuoteSpi *spi);
extern "C" void QuoteApi_SetHeartBeatInterval(XTP::API::QuoteApi *self, uint32_t interval);
extern "C" int QuoteApi_SubscribeMarketData(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_UnSubscribeMarketData(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_SubscribeOrderBook(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_UnSubscribeOrderBook(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_SubscribeTickByTick(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_UnSubscribeTickByTick(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_SubscribeAllMarketData(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_UnSubscribeAllMarketData(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_SubscribeAllOrderBook(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_UnSubscribeAllOrderBook(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_SubscribeAllTickByTick(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);