xtp-sys/src/bindings.rs

#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPQueryStkPositionRsp {
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub ticker_name: [::std::os::raw::c_char; 64usize],
    pub market: XTP_MARKET_TYPE,
    pub total_qty: i64,
    pub sellable_qty: i64,
    pub avg_price: f64,
    pub unrealized_pnl: f64,
    pub yesterday_position: i64,
    pub purchase_redeemable_qty: i64,
    pub position_direction: XTP_POSITION_DIRECTION_TYPE,
    pub reserved1: u32,
    pub executable_option: i64,
    pub lockable_position: i64,
    pub executable_underlying: i64,
    pub locked_position: i64,
    pub usable_locked_position: i64,
    pub unknown: [u64; 44usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPFundTransferNotice {
    pub serial_id: u64,
    pub transfer_type: XTP_FUND_TRANSFER_TYPE,
    pub amount: f64,
    pub oper_status: XTP_FUND_OPER_STATUS,
    pub transfer_time: u64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryFundTransferLogReq {
    pub serial_id: u64,
}
pub type XTPFundTransferLog = XTPFundTransferNotice;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryStructuredFundInfoReq {
    pub exchange_id: XTP_EXCHANGE_TYPE,
    pub sf_ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPStructuredFundInfo {
    pub exchange_id: XTP_EXCHANGE_TYPE,
    pub sf_ticker: [::std::os::raw::c_char; 16usize],
    pub sf_ticker_name: [::std::os::raw::c_char; 64usize],
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub ticker_name: [::std::os::raw::c_char; 64usize],
    pub split_merge_status: XTP_SPLIT_MERGE_STATUS,
    pub ratio: u32,
    pub min_split_qty: u32,
    pub min_merge_qty: u32,
    pub net_price: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryETFBaseReq {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryETFBaseRsp {
    pub market: XTP_MARKET_TYPE,
    pub etf: [::std::os::raw::c_char; 16usize],
    pub subscribe_redemption_ticker: [::std::os::raw::c_char; 16usize],
    pub unit: i32,
    pub subscribe_status: i32,
    pub redemption_status: i32,
    pub max_cash_ratio: f64,
    pub estimate_amount: f64,
    pub cash_component: f64,
    pub net_value: f64,
    pub total_amount: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryETFComponentReq {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPQueryETFComponentRsp {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub component_ticker: [::std::os::raw::c_char; 16usize],
    pub component_name: [::std::os::raw::c_char; 64usize],
    pub quantity: i64,
    pub component_market: XTP_MARKET_TYPE,
    pub replace_type: ETF_REPLACE_TYPE,
    pub premium_ratio: f64,
    pub amount: f64,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPQueryIPOTickerRsp {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub ticker_name: [::std::os::raw::c_char; 64usize],
    pub ticker_type: XTP_TICKER_TYPE,
    pub price: f64,
    pub unit: i32,
    pub qty_upper_limit: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryIPOQuotaRspV1 {
    pub market: XTP_MARKET_TYPE,
    pub quantity: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryIPOQuotaRsp {
    pub market: XTP_MARKET_TYPE,
    pub quantity: i32,
    pub tech_quantity: i32,
    pub unused: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPQueryOptionAuctionInfoReq {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPQueryOptionAuctionInfoRsp {
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub security_id_source: XTP_MARKET_TYPE,
    pub symbol: [::std::os::raw::c_char; 64usize],
    pub contract_id: [::std::os::raw::c_char; 64usize],
    pub underlying_security_id: [::std::os::raw::c_char; 16usize],
    pub underlying_security_id_source: XTP_MARKET_TYPE,
    pub list_date: u32,
    pub last_trade_date: u32,
    pub ticker_type: XTP_TICKER_TYPE,
    pub day_trading: i32,
    pub call_or_put: XTP_OPT_CALL_OR_PUT_TYPE,
    pub delivery_day: u32,
    pub delivery_month: u32,
    pub exercise_type: XTP_OPT_EXERCISE_TYPE_TYPE,
    pub exercise_begin_date: u32,
    pub exercise_end_date: u32,
    pub exercise_price: f64,
    pub qty_unit: i64,
    pub contract_unit: i64,
    pub contract_position: i64,
    pub prev_close_price: f64,
    pub prev_clearing_price: f64,
    pub lmt_buy_max_qty: i64,
    pub lmt_buy_min_qty: i64,
    pub lmt_sell_max_qty: i64,
    pub lmt_sell_min_qty: i64,
    pub mkt_buy_max_qty: i64,
    pub mkt_buy_min_qty: i64,
    pub mkt_sell_max_qty: i64,
    pub mkt_sell_min_qty: i64,
    pub price_tick: f64,
    pub upper_limit_price: f64,
    pub lower_limit_price: f64,
    pub sell_margin: f64,
    pub margin_ratio_param1: f64,
    pub margin_ratio_param2: f64,
    pub unknown: [u64; 20usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPCrdCashRepayRsp {
    pub xtp_id: i64,
    pub request_amount: f64,
    pub cash_repay_amount: f64,
}
#[repr(C)]
pub struct XTPCrdCashRepayInfo {
    pub xtp_id: i64,
    pub status: XTP_CRD_CR_STATUS,
    pub request_amount: f64,
    pub cash_repay_amount: f64,
    pub position_effect: XTP_POSITION_EFFECT_TYPE,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPCrdDebtInfo {
    pub debt_type: i32,
    pub debt_id: [::std::os::raw::c_char; 33usize],
    pub position_id: i64,
    pub order_xtp_id: u64,
    pub debt_status: i32,
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub order_date: u64,
    pub end_date: u64,
    pub orig_end_date: u64,
    pub is_extended: bool,
    pub remain_amt: f64,
    pub remain_qty: i64,
    pub remain_principal: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPCrdFundInfo {
    pub maintenance_ratio: f64,
    pub line_of_credit: f64,
    pub guaranty: f64,
    pub position_amount: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPClientQueryCrdDebtStockReq {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPCrdDebtStockInfo {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub remain_quantity: i64,
    pub order_withhold_quantity: i64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPClientQueryCrdPositionStockReq {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTPClientQueryCrdPositionStkInfo {
    pub market: XTP_MARKET_TYPE,
    pub ticker: [::std::os::raw::c_char; 16usize],
    pub limit_qty: i64,
    pub yesterday_qty: i64,
    pub left_qty: i64,
    pub frozen_qty: i64,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct XTPFundTransferReq {
    pub serial_id: u64,
    pub fund_account: [::std::os::raw::c_char; 16usize],
    pub password: [::std::os::raw::c_char; 64usize],
    pub amount: f64,
    pub transfer_type: XTP_FUND_TRANSFER_TYPE,
}
pub type XTPFundTransferAck = XTPFundTransferNotice;
#[repr(C)]
pub struct XTP_API_TraderSpi__bindgen_vtable(::std::os::raw::c_void);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTP_API_TraderSpi {
    pub vtable_: *const XTP_API_TraderSpi__bindgen_vtable,
}
#[repr(C)]
pub struct XTP_API_TraderApi__bindgen_vtable(::std::os::raw::c_void);
#[repr(C)]
#[derive(Debug)]
pub struct XTP_API_TraderApi {
    pub vtable_: *const XTP_API_TraderApi__bindgen_vtable,
}
extern "C" {
    #[link_name = "\u{1}_ZN3XTP3API9TraderApiD1Ev"]
    pub fn XTP_API_TraderApi_TraderApi_destructor(this: *mut XTP_API_TraderApi);
}
impl XTP_API_TraderApi {
    #[inline]
    pub unsafe fn destruct(&mut self) {
        XTP_API_TraderApi_TraderApi_destructor(self)
    }
}
#[repr(C)]
pub struct XTP_API_QuoteSpi__bindgen_vtable(::std::os::raw::c_void);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct XTP_API_QuoteSpi {
    pub vtable_: *const XTP_API_QuoteSpi__bindgen_vtable,
}
#[repr(C)]
pub struct XTP_API_QuoteApi__bindgen_vtable(::std::os::raw::c_void);
#[repr(C)]
#[derive(Debug)]
pub struct XTP_API_QuoteApi {
    pub vtable_: *const XTP_API_QuoteApi__bindgen_vtable,
}
extern "C" {
    #[link_name = "\u{1}_ZN3XTP3API8QuoteApiD1Ev"]
    pub fn XTP_API_QuoteApi_QuoteApi_destructor(this: *mut XTP_API_QuoteApi);
}
impl XTP_API_QuoteApi {
    #[inline]
    pub unsafe fn destruct(&mut self) {
        XTP_API_QuoteApi_QuoteApi_destructor(self)
    }
}
extern "C" {
    pub fn CreateQuoteApi(
        client_id: u8,
        save_file_path: *const ::std::os::raw::c_char,
        log_level: XTP_LOG_LEVEL,
    ) -> *mut XTP_API_QuoteApi;
}
extern "C" {
    pub fn QuoteApi_Release(self_: *mut XTP_API_QuoteApi);
}
extern "C" {
    pub fn QuoteApi_GetTradingDay(self_: *mut XTP_API_QuoteApi) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn QuoteApi_GetApiVersion(self_: *mut XTP_API_QuoteApi) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn QuoteApi_GetApiLastError(self_: *mut XTP_API_QuoteApi) -> *mut XTPRI;
}
extern "C" {
    pub fn QuoteApi_SetUDPBufferSize(self_: *mut XTP_API_QuoteApi, buff_size: u32);
}
extern "C" {
    pub fn QuoteApi_RegisterSpi(self_: *mut XTP_API_QuoteApi, spi: *mut XTP_API_QuoteSpi);
}
extern "C" {
    pub fn QuoteApi_SetHeartBeatInterval(self_: *mut XTP_API_QuoteApi, interval: u32);
}
extern "C" {
    pub fn QuoteApi_SubscribeMarketData(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeMarketData(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeOrderBook(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeOrderBook(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeTickByTick(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeTickByTick(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllMarketData(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeAllMarketData(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllOrderBook(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeAllOrderBook(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllTickByTick(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
